# axiom

./: .gitignore  CMakeLists.txt
Engine/: CMakeLists.txt  pch.h
Engine/Assets/Shaders/: BlinnPhong.glsl  DebugDraw.glsl  DepthPass.glsl  FullScreen.glsl  LightModels.glsl  Texture.glsl  VertexColor.glsl
Engine/Assets/Shaders/Include/: axiom_debug_modes.glsl  axiom_fragment.glsl  axiom_light_models.glsl  axiom_transform.glsl  axiom_vertex.glsl
Engine/include/: AxiomEngine.h
Engine/include/Axiom/: EntryPoint.h
Engine/include/Axiom/Core/: Application.h  Assert.h  CoreTypes.h  Engine.h  EngineModule.h  FileSystem.h  Game.h  Math.h  Types.h  Window.h
Engine/include/Axiom/Platform/: ApplicationWindow.h  Window.h
Engine/include/Axiom/Platform/Windows/: Win32Window.h
Engine/include/Axiom/Renderer/: OpenGLRenderer.h  RenderModule.h  Renderer.h
Engine/include/Axiom/Rendering/: GLRenderDevice.h  GLShader.h  Mesh.h  OpenGLRenderer.h  RenderDevice.h  RenderModule.h  Shader.h  Vertex.h
Engine/include/Axiom/Resources/: Resource.h  Shader.h
Engine/include/Core/: Application.h  ApplicationModule.h  Assert.h  Core.h  EngineModule.h  FileSystemModule.h  Log.h  Memory.h  Timestep.h  Types.h
Engine/include/Event/: Event.h  KeyboardEvent.h  WindowEvent.h
Engine/include/Input/: Input.h  InputModule.h
Engine/include/Math/: Matrix4.h  Vector.h
Engine/include/Platform/: ApplicationWindow.h
Engine/include/Platform/GLFW/: GLFWInput.h  GLFWWindow.h
Engine/include/Platform/OpenGL/: OpenGLBuffer.h  OpenGLGraphicsDevice.h  OpenGLRHI.h  OpenGLRenderMesh.h  OpenGLRenderResourceFactory.h  OpenGLShader.h  OpenGLSwapChain.h  OpenGLTexture2D.h
Engine/include/Platform/Windows/: Win32Window.h
Engine/include/Renderer/: Buffer.h  Camera.h  GraphicsDevice.h  RHI.h  RenderMesh.h  RenderResourceFactory.h  Shader.h  SwapChain.h  Texture.h  Vertex.h
Engine/include/Rendering/: GLRenderDevice.h  GLRenderMeshProxy.cpp  GLRenderMeshProxy.h  GLShader.h  Material.h  Mesh.h  MeshComponent.h  RenderDevice.h  RenderMesh.h  RenderMeshProxy.h  RenderModule.h  RenderShader.h  RenderTypes.h  Shader.h  Vertex.h
Engine/include/Rendering/GL/: GLRenderDevice.h  GLRenderMesh.h  GLRenderShader.h  GLShader.h
Engine/include/Resources/: GLShaderLoader.h  GLShaderResource.h  MeshResource.h  Resource.h  ResourceLoader.h  ResourceModule.h  ShaderResource.h
Engine/include/Scene/: Component.h  Entity.h  MeshComponent.h  Scene.h
Engine/src/: AxiomEngine.h
Engine/src/Core/: Application.cpp  Application.h  ApplicationModule.cpp  ApplicationModule.h  Engine.cpp  EngineModule.cpp  FileSystemModule.cpp  Game.cpp  Log.h  Math.cpp  Types.h  Window.cpp
Engine/src/Event/: Event.cpp  KeyboardEvent.h
Engine/src/Geometry/: Cube.cpp  Cube.h  Quad.cpp  Quad.h  Triangle.cpp  Triangle.h
Engine/src/ImGui/: ImGuiModule.cpp  ImGuiModule.h
Engine/src/Input/: Input.cpp  Input.h  InputModule.cpp  Keyboard.h  Mouse.h
Engine/src/Math/: Math.h  Matrix4.h  Vector.h
Engine/src/Platform/: ApplicationWindow.cpp  ApplicationWindow.h  Window.cpp
Engine/src/Platform/GLFW/: GLFWInput.cpp  GLFWInput.h  GLFWWindow.cpp  GLFWWindow.h
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLGraphicsDevice.cpp  OpenGLGraphicsDevice.h  OpenGLRHI.cpp  OpenGLRenderMesh.cpp  OpenGLShader.cpp  OpenGLShader.h  OpenGLSwapChain.cpp  OpenGLTexture2D.cpp  OpenGLTexture2D.h
Engine/src/Platform/Windows/: Win32Window.cpp  Win32Window.h
Engine/src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  CameraController.cpp  CameraController.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsDevice.cpp  GraphicsDevice.h  Material.cpp  Material.h  MeshComponent.cpp  MeshComponent.h  OpenGLRenderResourceFactory.cpp  OpenGLRenderer.cpp  RenderMesh.cpp  RenderModule.cpp  RenderModule.h  RenderResourceFactory.cpp  RenderTypes.h  Renderer.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
Engine/src/Rendering/: GLRenderDevice.cpp  GLShader.cpp  Mesh.cpp  MeshComponent.cpp  OpenGLRenderer.cpp  RenderDevice.cpp  RenderMesh.cpp  RenderMeshProxy.cpp  RenderModule.cpp  RenderShader.cpp  Shader.cpp  Vertex.cpp
Engine/src/Rendering/GL/: GLRenderDevice.cpp  GLRenderMesh.cpp  GLRenderShader.cpp  GLShader.cpp
Engine/src/Resources/: GLShaderLoader.cpp  GLShaderLoader.h  GLShaderResource.cpp  MeshResource.cpp  MeshResource.h  OBJLoader.cpp  OBJLoader.h  Resource.cpp  ResourceLoader.cpp  ResourceLoader.h  ResourceModule.cpp  ResourceModule.h  Shader.cpp  ShaderResource.cpp  ShaderResource.h  Texture2DLoader.cpp  Texture2DLoader.h  Texture2DResource.cpp  Texture2DResource.h
Engine/src/Scene/: Component.cpp  Component.h  Entity.cpp  Entity.h  MeshComponent.cpp  Scene.cpp  Scene.h  SceneModule.cpp  SceneModule.h  TransformComponent.h
Game/: CMakeLists.txt
Game/include/: MyGame.h
Game/src/: Game.cpp  MyGame.cpp
Runtime/: CMakeLists.txt
Runtime/src/: main.cpp
Sandbox/: CMakeLists.txt
Sandbox/Assets/Shaders/: LightModels.glsl  Texture.glsl  VertexColor.glsl
Sandbox/include/: Sandbox.h  TriangleMesh.h
Sandbox/src/: Sandbox.cpp  Sandbox.h  TriangleMesh.cpp
src/: YetAnotherPhysicsEngine.cpp
